# python-fast-api-practice

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
app/: main.py
app/api/: router.py
app/api/v1/: annotated.py  hello.py  optional.py  typehints.py  union.py
app/api/v1/appendix/: router.py  schemas.py
app/api/v1/async_sqlalchemy/: example.sqlite  service.py
app/api/v1/asyncio/: service.py
app/api/v1/crud_books/: router.py  schemas.py  service.py
app/api/v1/fastapi_async/: router.py
app/api/v1/fastapi_di/: router.py  service.py
app/api/v1/fastapi_memoapp/: db.py  init_database.py  router.py
app/api/v1/fastapi_memoapp/cruds/: memo.py
app/api/v1/fastapi_memoapp/frontapp/: app.js  index.html
app/api/v1/fastapi_memoapp/models/: memo.py
app/api/v1/fastapi_memoapp/routers/: memo.py
app/api/v1/fastapi_memoapp/schemas/: memo.py
app/api/v1/fastapi_router/: main.py
app/api/v1/fastapi_router_refactoring/: router.py
app/api/v1/fastapi_router_refactoring/routers/: categories.py  items.py
app/api/v1/fastapi_router_refactoring/schemas/: category.py  item.py
app/api/v1/path_parameter/: router.py  service.py
app/api/v1/pydantic/: router.py  service.py
app/api/v1/pydantic_field/: router.py  service.py
app/api/v1/query_parameter/: router.py  service.py
app/api/v1/sync_async/: service.py
tests/: test_root.py
